main.css: Prevent long strings from overflowing (#146)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -428,6 +428,10 @@ table td {
   font-size: 1.1em;
   font-style: italic;
 }
+.post {
+  /* Prevent long strings from overflowing */
+  overflow-wrap: break-word;
+}
 .post .post-date, .prev-post-date, .next-post-date {
   color: gray;
 }
